Closed Bug 157890 Opened 23 years ago Closed 23 years ago

[FIX]too wide cells if table layout fixed used

Categories

(Core :: Layout, defect, P1)

x86
Other
defect

Tracking

()

RESOLVED FIXED
mozilla1.1beta

People

(Reporter: tapio.markula, Assigned: bzbarsky)

References

()

Details

(Keywords: testcase)

Attachments

(2 files)

>> http://www.nic.fi/~tapio1/Tests/NatureSiteMap.htm >Looks like we make a bunch of cells 1px too wide when table-layout:fixed is used, so that the last cell is not nearly wide enough. YES - you have reached the main problem! >You define the table to be 121px wide. You define table cell widths adding up to 119px. There is no way to follow this CSS. We have to ignore either the 121 or the 119. This is for the <table class="allPages">; I have not bothered to investigate where else the same sort of thing may have happened. in table-layout:fixed the FIRST table row and width values for that is the MOST important factor. IF there is conflicts between the width of the entire table and total width calculating from the widths of individual cells, the total width of the entire table must be AT LEAST: the sum of the width values for individual cells + possible padding, border & border-spacing values for table cells in the FIRST table row. If the width of the entire table is BIGGER than the previous mentioned total width, the width of the entire table can be taken account. In this case Mozilla can interpret according to the '121px' BUT this is then the MAXIMUM value. As you have noticed, Mozilla renders the width BIGGER than the maximum allowed width. Anyway Mozilla renders the width of the table cells too wide. By the way I have tested giving for Mozilla Gecko fo the table element SMALLER width values as in the example, but it didn't help anything. The error is apporiximately 1 pixel/ every cell as you have noticed! That's why setting table.allPages {width:119px} doesn't solve anything. Would you mind filing a bug on that? Assign it to me, link to that page. I'll make sure it ends up in the right place.
Changing url to page that shows the problem.
Attached patch Proposed fixSplinter Review
bernd, would you review, please?
Status: UNCONFIRMED → NEW
Ever confirmed: true
Priority: -- → P1
Summary: too wide cells if table layout fixed used → [FIX]too wide cells if table layout fixed used
Target Milestone: --- → mozilla1.1beta
Keywords: testcase
Comment on attachment 91935 [details] [diff] [review] Proposed fix r=karnaze, if the change passes the regression tests.
Attachment #91935 - Flags: review+
Yep. It passes the regression tests.
Comment on attachment 91935 [details] [diff] [review] Proposed fix a=asa (on behalf of drivers) for checkin to 1.1
Attachment #91935 - Flags: approval+
Comment on attachment 91935 [details] [diff] [review] Proposed fix a=asa (on behalf of drivers) for checkin to 1.1
fix checked in on trunk.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: