Fix allocation of whitespace in table-layout:fixed to handle rounding errors better.  Bug 157890, r=karnaze, sr=dbaron, a=asa